# ai-model-dev

./: .gitignore  Makefile  README.md  chunk_pdfs.py  main.py  pyproject.toml
data/: data_manifest.json
data/processed/: aegis2.json  agentharm.json  agentsmith.json  artprompt.json  beavertails.json  crescendo.json  fitd.json  frontier_ai_risk_management.json  goat.json  harmbench.json  how_do_llms_fail.json  nist.ai.100-1.json  pair.json  safedecoding.json  self_jailbreaking.json  sorrybench.json  xteaming.json
logs/: run_logs.jsonl
outputs/: disagreement_map_attack_effectiveness.md  evidence_table_Multi-turn_jailbreak_strategies_20260224_100810.md  evidence_table_multi_turn_attacks.md  evidence_table_safety_benchmarks.md  gap_analysis_defense_mechanisms.md  synthesis_memo_Compare_the_methodology_of_'static'_jail_20260224_101252.md
outputs/threads/: 17f2db0f-89a3-41a4-8066-7248373b8189.json  2f2fbc18-c37d-4cff-9620-4d1de73bb588.json  434b7499-9f74-49b8-b619-164371de5dd6.json  722473cd-9372-43fd-abb7-7b51dd3a4954.json  b08c0901-585a-4c6a-80eb-51b7bfc550f7.json  e6bb5720-f970-4306-9a29-f48f9b6780d5.json
phase2/: metadata_helper.py
phase2/eval/: eval_results.json
phase2/logs/: run_logs.jsonl
phase2/src/: config.py  evaluate.py  ingest.py  inspect_chunks.py  query.py
report/: Evaluation Report for Personal Research Portal Phase 2 - mzakir.docx  phase3_final_report.md  phase3_report_notes.txt
src/: config.py
src/app/: main.py
src/eval/: eval_results.json  metrics.py  queries.json  runner.py
src/ingest/: chunk.py  embed.py  parse.py  pipeline.py
(+15 files in other folders)
